Disable automatic container build
We do not have the Citrix Workspace App downloaded and available
on GitHub

--- a/.github/workflows/docker-build-publish-image.yml
+++ b/.github/workflows/docker-build-publish-image.yml
@@ -1,13 +1,10 @@
 ---
 name: Publish Docker image
 #on:
-#  release:
-#    types: [published]
-# only build on tags, for testing use manual workflow_dispatch
 on:
-  push:
-    paths:
-      - 'Dockerfile'
+  #push:
+  #  paths:
+  #    - 'Dockerfile'
   workflow_dispatch:
 
 jobs:
